Fix interface settings on mobile

--- a/app/javascript/flavours/aether/styles/components/local_settings.scss
+++ b/app/javascript/flavours/aether/styles/components/local_settings.scss
@@ -150,7 +150,7 @@
   margin-bottom: 10px;
 }
 
-@media screen and (width <= 630px) {
+@media screen and (width <= 650px) {
   .glitch.local-settings__navigation {
     width: 40px;
     flex-shrink: 0;
@@ -162,6 +162,10 @@
     span:last-of-type {
       display: none;
     }
+  }
+
+  .local-settings__navigation .local_prefs {
+    width: 40px;
   }
 }
 
